Avoid overwrapping navbar and body.

--- a/choice/static/choice/css/choice.css
+++ b/choice/static/choice/css/choice.css
@@ -3,7 +3,9 @@
     margin-bottom:3px;
 }
 
-.body {
-    padding-left: 15px;
+/* Show it is fixed to the top */
+body {
+  min-height: 75rem;
+  padding-top: 4.5rem;
 }
 
